<?xml version="1.0" encoding="UTF-8"?>

<project name="Lab3Ant" default="all">

    <!-- properties -->
    <property file="build.properties"/>
    <property environment="env"/>
    <condition property="java21.home" value="/opt/homebrew/opt/openjdk@21/libexec/openjdk.jdk/Contents/Home" else="/Library/Java/JavaVirtualMachines/jdk-21.jdk/Contents/Home">
        <available file="/opt/homebrew/opt/openjdk@21/libexec/openjdk.jdk/Contents/Home"/>
    </condition>

    <!--    try-catch ant lib-->
    <taskdef resource="net/sf/antcontrib/antlib.xml">
        <classpath>
            <pathelement location="${lib.dir}/ant-contrib-1.0b3.jar"/>
        </classpath>
    </taskdef>

    <!-- classpath -->
    <path id="project.classpath">
        <fileset dir="${lib.dir}">
            <include name="*.jar"/>
        </fileset>
    </path>

    <!-- CLEAN -->
    <target name="clean">
        <delete dir="${build.dir}"/>
        <delete dir="${dist.dir}"/>
    </target>

    <!-- COMPILE -->
    <target name="compile">
        <mkdir dir="${classes.dir}"/>
        <javac
                srcdir="${src.dir}"
                destdir="${classes.dir}"
                includeantruntime="false"
                fork="true"
                source="17"
                target="17"
                encoding="UTF-8">
            <classpath refid="project.classpath"/>
        </javac>

        <!-- copy resources -->
        <copy todir="${classes.dir}">
            <fileset dir="${resources.dir}"/>
        </copy>
    </target>

    <!-- BUILD -->
    <target name="build" depends="compile">
        <mkdir dir="${dist.dir}"/>
        <war
                destfile="${dist.dir}/${war.name}"
                webxml="${web.dir}/WEB-INF/web.xml"
                manifest="${manifest.file}">

            <!-- web resources -->
            <fileset dir="${web.dir}"/>

            <!-- compiled classes -->
            <classes dir="${classes.dir}"/>

            <!-- libraries -->
            <lib dir="${lib.dir}"/>
        </war>
    </target>

    <!-- TEST -->
    <target name="test" depends="build">
        <mkdir dir="${test.classes.dir}"/>
        <mkdir dir="${build.dir}/test-reports"/>

        <!-- compile tests with Java 21 -->
        <javac srcdir="${test.dir}"
               destdir="${test.classes.dir}"
               includeantruntime="false"
               fork="true"
               source="17"
               target="17"
               executable="${java21.home}/bin/javac">
            <classpath>
                <path refid="project.classpath"/>
                <pathelement path="${classes.dir}"/>
            </classpath>
        </javac>

        <!-- run tests with Java 21 -->
        <junit printsummary="yes"
               haltonfailure="yes"
               fork="yes"
               showoutput="true"
               jvm="${java21.home}/bin/java"> <!-- Указываем JVM -->

            <jvmarg value="-XX:+EnableDynamicAgentLoading"/> <!-- Для подавления предупреждений -->

            <classpath>
                <path refid="project.classpath"/>
                <pathelement path="${classes.dir}"/>
                <pathelement path="${test.classes.dir}"/>
            </classpath>

            <formatter type="xml" usefile="true"/>
            <formatter type="plain" usefile="false"/>

            <batchtest todir="${build.dir}/test-reports">
                <fileset dir="${test.classes.dir}">
                    <include name="**/*Test.class"/>
                </fileset>
            </batchtest>
        </junit>
    </target>

    <!-- MUSIC -->
    <target name="music">
        <trycatch property="error.occurred">
            <try>
                <antcall target="build"/>
            </try>
            <finally>
                <parallel>
                    <antcall target="result-soundtrack"/>
                    <antcall target="show-splash"/>
                </parallel>
            </finally>
        </trycatch>
    </target>

    <!-- COMPILE SPLASH -->
    <target name="compile-splash">
        <mkdir dir="${test.classes.dir}"/>
        <javac srcdir="${test.dir}"
               destdir="${test.classes.dir}"
               includeantruntime="false"
               fork="true"
               source="17"
               target="17"
               encoding="UTF-8">
            <include name="org/example/misc/CenteredSplash.java"/>
        </javac>
    </target>

    <!-- SPLASH IMAGE -->
    <target name="show-splash" depends="compile-splash">
        <condition
                property="image"
                value="${image.failure.file}"
                else="${image.success.file}">
            <isset property="error.occurred"/>
        </condition>
        <condition
                property="duration"
                value="3000"
                else="5000">
            <isset property="error.occurred"/>
        </condition>
        <!-- Запускаем Java-программу для показа изображения -->
        <java classname="org.example.misc.CenteredSplash" fork="true" spawn="true">
            <classpath location="build/test-classes"/>
            <arg value="src/test/assets/images/${image}"/>
            <arg value="--auto-close"/>
            <arg value="${duration}"/>
        </java>
    </target>

    <!-- RESULT SOUNDTRACK -->
    <target name="result-soundtrack">
        <condition
                property="music"
                value="${music.failure.file}"
                else="${music.success.file}">
            <isset property="error.occurred"/>
        </condition>
        <condition
                property="message"
                value="${message.failure.text}"
                else="${message.success.text}">
            <isset property="error.occurred"/>
        </condition>

        <echo message="${message}"/>

        <!-- Windows -->
        <exec executable="cmd" osfamily="windows" spawn="true">
            <arg value="/c"/>
            <arg value="start"/>
            <arg value=""/>
            <arg value="src/test/assets/music/${music}"/>
        </exec>

        <!-- macOS -->
        <exec executable="afplay" osfamily="mac" spawn="true">
            <arg value="src/test/assets/music/${music}"/>
        </exec>
    </target>

    <target name="history">
        <exec executable="git" outputproperty="git.head_revision">
            <arg line="rev-parse HEAD"/>
        </exec>
        <exec executable="git" outputproperty="git.tail_revision">
            <arg line="rev-list --max-parents=0 HEAD"/>
        </exec>

        <echo message="Head revision: ${git.head_revision}"/>
        <echo message="Tail revision: ${git.tail_revision}"/>

        <var name="git.new_revision" unset="true"/>
        <exec executable="git" outputproperty="git.new_revision">
            <arg line="rev-parse HEAD~1"/>
        </exec>

        <trycatch>
            <try>
                <antcall target="compile"/>
                <var name="compile.successful" unset="true"/>
                <property name="compile.successful" value="true"/>
                <echo message="Project compiled successfully!"/>

                <sequential>
                    <exec executable="git" outputproperty="diff_output">
                        <arg line="diff ${git.head_revision} ${git.new_revision}"/>
                    </exec>
                    <echo file="diff_output.txt" message="${diff_output}"/>
                </sequential>

            </try>
            <catch>
                <echo message="Project compilation failed!"/>
                <echo message="Checkout revision: ${git.new_revision}"/>
                <exec executable="git" dir="${project.dir}">
                    <arg line="reset --hard ${git.new_revision}"/>
                </exec>
                <var name="compile.successful" unset="true"/>
                <property name="compile.successful" value="false"/>
                <if>
                    <equals arg1="${git.new_revision}" arg2="${git.tail_revision}"/>
                    <then>
                        <echo message="No more revisions to checkout"/>
                    </then>
                    <else>
                        <runtarget target="history"/>
                    </else>
                </if>
            </catch>
        </trycatch>

        <exec executable="git" dir="${project.dir}">
            <arg line="checkout ${git.head_revision}"/>
        </exec>
    </target>

    <!-- DIFF -->
    <target name="diff">
        <exec executable="git"
              outputproperty="git.diff">
            <arg value="diff"/>
            <arg value="--name-only"/>
        </exec>
        <echo message="${git.diff}"/>
        <for list="${git.classes}" param="class.name" delimiter=",">
            <sequential>
                <if>
                    <contains string="${git.diff}" substring="@{class.name}"/>
                    <then>
                        <property name="need.commit" value="true"/>
                    </then>
                </if>
            </sequential>
        </for>
        <if>
            <isset property="need.commit"/>
            <then>
                <antcall target="git-commit"/>
            </then>
        </if>
    </target>

    <!-- GIT COMMIT -->
    <target name="git-commit"
            if="need.commit">
        <exec executable="git">
            <arg value="add"/>
            <arg value="."/>
        </exec>
        <exec executable="git">
            <arg value="commit"/>
            <arg value="-m"/>
            <arg value="Auto commit by Ant"/>
        </exec>
    </target>

    <!-- SCP  -->
    <target name="scp" depends="build" description="Deploy WAR file via SCP">
        <property file="deploy.properties"/>

        <fail unless="scp.host" message="scp.host is not defined in deploy.properties"/>
        <fail unless="scp.username" message="scp.username is not defined in deploy.properties"/>
        <fail unless="scp.remote.dir" message="scp.remote.dir is not defined in deploy.properties"/>

        <available file="${dist.dir}/${war.name}" property="war.exists"/>
        <fail unless="war.exists" message="WAR file ${dist.dir}/${war.name} not found. Run 'ant build' first."/>

        <echo message="Deploying ${dist.dir}/${war.name} to ${scp.username}@${scp.host}:${scp.remote.dir}/"/>

        <exec executable="scp" failonerror="true">
            <arg value="-P"/>
            <arg value="${scp.port}"/>
            <arg value="${dist.dir}/${war.name}"/>
            <arg value="${scp.username}@${scp.host}:${scp.remote.dir}/"/>
        </exec>

        <echo message="Deployment completed successfully!"/>
    </target>

    <!-- XML -->
    <target name="xml" description="Validate all XML files">
        <echo message="=== Validating XML files ==="/>

        <xmlvalidate file="build.xml" failonerror="true" lenient="true"/>
        <echo message="build.xml is well-formed"/>

        <xmlvalidate file="${web.dir}/WEB-INF/web.xml" failonerror="false" lenient="true"/>
        <echo message="web.xml validation attempted"/>

        <xmlvalidate failonerror="false" lenient="true">
            <fileset dir="." includes="**/*.xml"
                     excludes="build.xml, **/build/** , **/dist/** , **/target/** , **/.idea/** , **/*.iml"/>
        </xmlvalidate>

        <echo message="=== XML validation complete ==="/>
    </target>

    <!-- REPORT -->
    <target name="report" depends="test" description="Commit test reports to Git">
        <echo message="=== Committing JUnit Reports to Git ==="/>

        <tstamp>
            <format property="now" pattern="yyyy-MM-dd HH:mm:ss"/>
        </tstamp>

        <!-- Копируем отчеты из build в корень проекта -->
        <copy todir="test-reports" failonerror="false">
            <fileset dir="${build.dir}/test-reports" includes="TEST-*.xml"/>
        </copy>

        <!-- Добавляем в Git -->
        <exec executable="git" dir="." failonerror="false">
            <arg value="add"/>
            <arg value="test-reports/*.xml"/>
        </exec>

        <!-- Коммитим -->
        <exec executable="git" dir="." failonerror="false">
            <arg value="commit"/>
            <arg value="-m"/>
            <arg value="Test reports - ${now}"/>
        </exec>

        <echo message="Test reports committed to Git"/>
    </target>

    <!--  RUN THE SCRIPT  -->
    <target name="all">
        <trycatch property="error.occurred">
            <try>
                <antcall target="clean"/>
                <antcall target="test"/>
                <antcall target="diff"/>
            </try>
            <finally>
                <parallel>
                    <antcall target="result-soundtrack"/>
                    <antcall target="show-splash"/>
                </parallel>
            </finally>
        </trycatch>
    </target>
</project>